# 2026-spring-college-financial-health

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
analysis/: closed_colleges.csv
analysis/models/: xgb_close_1yr.json  xgb_close_3yr.json
analysis/replicated_tables/: original_table4.csv  replicated_table4.csv  replicated_table5.csv
docs/: data_sources.md  human_work.md  table4_replication.md  table5_replication.md  variable_inventory.md
manual_data/frc/raw/: frc_2006.xls  frc_2011.xls  frc_2012.xls  frc_2014.xls  frc_2015.xls  frc_2016.xls  frc_2018.xls  frc_2019.xls  frc_2020.xls  frc_2021.xls
notes/: 2026_04_01.md  2026_04_10.md  2026_04_15.md  2026_04_22.md  session_notes.md
scripts/: build_panel.py  college_risk.py  download_bea.py  download_bls.py  download_frc.py  download_ipeds.py  download_peps.py  download_saipe.py  download_scorecard.py  identify_closed_colleges.py  merge_scorecard.py  predict_new_data.py  replicate_table4.py  replicate_table5.py  utils.py
